public/css/main.css
@font-face {
  font-family: 'LM Precious Sans';
  src: url('../font/lmprecioussans-100.woff2') format('woff2');
  font-style:normal;
  font-weight:100;
}

@font-face {
  font-family: 'LM Precious Sans';
  src: url('../font/lmprecioussans-300.woff2') format('woff2');
  font-style:normal;
  font-weight:300;
}

@font-face {
  font-family: 'LM Precious Sans';
  src: url('../font/lmprecioussans-600.woff2') format('woff2');
  font-style:normal;
  font-weight:600;
}

@font-face {
  font-family: 'MyWebFont';
  src:  url('myfont.woff2') format('woff2'),
        url('myfont.woff') format('woff');
}

/* open-sans-300italic - latin */
@font-face {
  font-family: 'Open Sans';
  font-style: italic;
  font-weight: 300;
  src: url('../font/open-sans-v13-latin-300italic.eot'); /* IE9 Compat Modes */
  src: local('Open Sans Light Italic'), local('OpenSansLight-Italic'),
       url('../font/open-sans-v13-latin-300italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
       url('../font/open-sans-v13-latin-300italic.woff2') format('woff2'), /* Super Modern Browsers */
       url('../font/open-sans-v13-latin-300italic.woff') format('woff'), /* Modern Browsers */
       url('../font/open-sans-v13-latin-300italic.ttf') format('truetype'), /* Safari, Android, iOS */
       url('../font/open-sans-v13-latin-300italic.svg#OpenSans') format('svg'); /* Legacy iOS */
}
/* open-sans-regular - latin */
@font-face {
  font-family: 'Open Sans';
  font-style: normal;
  font-weight: 400;
  src: url('../font/open-sans-v13-latin-regular.eot'); /* IE9 Compat Modes */
  src: local('Open Sans'), local('OpenSans'),
       url('../font/open-sans-v13-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
       url('../font/open-sans-v13-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
       url('../font/open-sans-v13-latin-regular.woff') format('woff'), /* Modern Browsers */
       url('../font/open-sans-v13-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
       url('../font/open-sans-v13-latin-regular.svg#OpenSans') format('svg'); /* Legacy iOS */
}

body{
  background-color: white;
  color: white;
  font-family: 'LM Precious Sans';
  font-weight: 100;
  font-size: 12px;
  margin: 0;
  padding: 0;
}

header a{
  text-decoration: none;
  color: white;
}

header a:hover{
  color: white;
}

header a:active{
  color: white;
  text-decoration: none;  
}

header a:visited{
  color: white;
  text-decoration: none;
}

header{
  background-color: #041722;
  height: 108px;
  width: 100%;
  display: flex;
}

nav{
  margin-left: 50px;
  font-size: 28px;
  height: 102px;
  display: block;
  line-height: 102px;
  /*background-color: blue;*/
  width: 100%;
}

nav ul {
  list-style-type: none;
  float: right;
  margin: 0;
  padding: 0;
}

nav ul li {
  float: left;
  margin-right: 30px;
}

nav ul li a {color: white;
    padding: 0 10px;
    text-decoration: none;
}

nav ul li a:hover{
  color: lightblue !important;
}

nav ul li a:visited{
  color: white !important;
  text-decoration: none;
}

nav ul li a:hover {
     color: #333;
}

#logo{
  font-size: 72px;
  margin-top: -5px;
  margin-left: 30px;
}

#logo a:hover{
  text-decoration: none;
}

#topSplash{
  width: 100%;
  height: 307px;
  background-image: url('../img/london.jpg');
}

#splashBoxContainer{
  width: 92%;
  height: 307px;
  margin: 0px auto 0px auto;
}

#splashBox{
  position: absolute;
  padding: 20px;
  margin-top: 25px;
  background-color: #fff;
  width: calc(40% - 40px);
  min-width: 400px;
  height: auto;
  color: #000;
}

#splashBoxHeadText{
  padding-bottom: 15px;
}

#splashBoxHeadText h1{
  font-size: 32px;
  font-weight: 300;
  margin: -4px 0 -15px 0;
  padding: 0;
}

#splashBoxMainText p{
  font-size: 20px;
  font-weight: lighter;
  word-wrap: break-word;
}

#pageTagline{
  width: 100%;
  height: 136px;
  background-image: url('../img/flair.png');
  text-align: center;
  font-size: 90px;
}

.thePageTagLine{
  position: relative;
  top: -10px;
}

#coreContent{
  width: 92%;
  margin: 40px auto 20px auto;
  color: #474747;
  text-align: left;
  font-size: 26px;
}

#coreContent h1{
  text-align: left;
  font-size: 48px;
  margin: 0 0 -20px 0;
  padding: 0;
  font-weight: 600;
  letter-spacing: -2px;
}

#lostItems{
  padding-bottom: 20px;
}

.logoGreen{
  color: #96c766;
}


.italic{
  font-style: italic;
}

.reducedSpacing{
  letter-spacing: -2px;
}

.veryReducedSpacing{
  letter-spacing: -5px;
}

.minus2px{
  margin-left: -2px;
}

.minus4px{
  margin-left: -3px;
}

.openSans{
  font-family: 'Open Sans', 'LM Precious Sans', 'Helvetica', 'Arial', sans-serif;
}

.lm{
  font-family: 'LM Precious Sans', 'Open Sans', 'Helvetica', 'Arial', sans-serif;
}

footer{
  width: 100%;
  font-size: 42px;
  color: #fff;
  background-color: #333;
  text-align: center;
  font-size: 16px;
  padding-top: 3px;
  height: 40px;
  border-top: 5px solid #041722;
}

.container-fluid{
  margin-top: 0px;
}

.panel-default>.panel-heading{
  height: 80px;
  background-color: #3b1600;
  border-radius: 0;
  color: white;
  font-size: 36px;
}

.panel-default>.panel-heading>.panel-heading-text{
  width: 80%;
  margin: 0 auto;
}

.panel-default>.panel-heading>.panel-heading-text img{
  margin-top: -5px;
  margin-right: 12px;
}

.panel-default>.panel-body{
  color: #000;
  font-size: 16px;
  font-family: 'Open Sans', 'LM Precious Sans', 'Helvetica', 'Arial', sans-serif;
}

.panel-default>.panel-body>.panel-body-text{
  width: 80%;
  margin: 5px auto;
}

.panel{
  border: none;
}

.panel-body-text form{
  font-size: 24px;
}

.panel-body-text form select{
  width: 300px;
}

.panel-body-text form input{
  width: 300px;
}

.floatLeft{
  float: left;
}

.floatRight{
  float: right;
}

input[type=radio]{
  float: left;
  width: 50px !important;
}

.lostItem{
  width: 97%;
  margin: 0 auto;
  min-height: 200px;
  background-color: #093c5b;
  color: #fff;
  border-radius: 25px;
  margin-bottom: 5px;
}

.lost{
  background-color: #3b1600;
}
/* ... */

